# AutomationTest

./: mobile_test.py  pyproject.toml
automation_test/: approval_test.robot  dashboard_test.robot  log.html  mobile_test.robot  orion_test.robot  output.xml  report.html
